--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
   <string name="rn_app_push_update_base_url">http://54.235.224.204:3000/</string>
   <string name="rn_app_push_update_shared_prefs">RNAppPushUpdateSharedPrefs</string>
   <string name="rn_app_push_update_shared_prefs_bundle_id">rn_app_push_update_shared_prefs_bundle_id</string>
+  <string name="rn_app_push_update_fcm_update_topic">react_native_app_push_update_fcm_update_topic</string>
 </resources>
