--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
   <string name="rn_app_push_update_base_url">https://svhydro.com/</string>
   <string name="rn_app_push_update_shared_prefs">RNAppPushUpdateSharedPrefs</string>
   <string name="rn_app_push_update_shared_prefs_bundle_id">rn_app_push_update_shared_prefs_bundle_id</string>
+  <string name="rn_app_push_update_shared_prefs_patch_id">rn_app_push_update_shared_prefs_patch_id</string>
   <string name="rn_app_push_update_shared_prefs_version_code">rn_app_push_update_shared_prefs_version_code</string>
   <string name="rn_app_push_update_fcm_update_topic">react_native_app_push_update_fcm_update_topic</string>
 </resources>
